--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1039,6 +1039,11 @@ color: #fff;
 body{display:none}
   
 }
+@media (min-width: 1281px) {
+  
+body{display:none}
+  
+}
 </style>
 </head>
 <body itemscope='itemscope' itemtype='http://schema.org/WebPage'>
