--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1035,12 +1035,14 @@ color: #fff;
 <style type='text/css'>
 /*<![CDATA[*/
 @media (min-width: 1025px) and (max-width: 1280px) {
-  
+html:after {
+  content: "Akses ditolak! Gunakan HP atau Mobile";}  
 body{display:none}
   
 }
 @media (min-width: 1281px) {
-  
+html:after {
+  content: "Akses ditolak! Gunakan HP atau Mobile";}    
 body{display:none}
   
 }
