--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1036,15 +1036,20 @@ color: #fff;
 /*<![CDATA[*/
 @media (min-width: 1025px) and (max-width: 1280px) {
 html:after {
-  content: "Akses ditolak! Gunakan HP atau Mobile";}  
+  content: "Akses ditolak! Gunakan HP atau Mobile";margin: 0 auto;text-align:center;}    
 body{display:none}
   
 }
 @media (min-width: 1281px) {
 html:after {
-  content: "Akses ditolak! Gunakan HP atau Mobile";}    
+  content: "Akses ditolak! Gunakan HP atau Mobile";margin: 0 auto;text-align:center;}    
 body{display:none}
   
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+ html:after {
+  content: "Akses ditolak! Gunakan HP atau Mobile";margin: 0 auto;text-align:center;}    
+body{display:none}
 }
 </style>
 </head>
