--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1035,20 +1035,18 @@ color: #fff;
 <style type='text/css'>
 /*<![CDATA[*/
 @media (min-width: 1025px) and (max-width: 1280px) {
-html:after {
-  content: "Akses ditolak! Gunakan HP atau Mobile";margin: 0 auto;text-align:center;}    
+ html:after {
+  content: "Akses ditolak! Gunakan HP atau Mobile";padding-left:30%}    
 body{display:none}
-  
 }
 @media (min-width: 1281px) {
-html:after {
-  content: "Akses ditolak! Gunakan HP atau Mobile";margin: 0 auto;text-align:center;}    
+ html:after {
+  content: "Akses ditolak! Gunakan HP atau Mobile";padding-left:30%}    
 body{display:none}
-  
 }
 @media (min-width: 768px) and (max-width: 1024px) {
  html:after {
-  content: "Akses ditolak! Gunakan HP atau Mobile";margin: 0 auto;text-align:center;}    
+  content: "Akses ditolak! Gunakan HP atau Mobile";padding-left:30%}    
 body{display:none}
 }
 </style>
