--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1047,8 +1047,28 @@ body{display:none}
 @media (min-width: 768px) and (max-width: 1024px) {
  html:after {
   content: "Akses ditolak! Gunakan HP atau Mobile";padding-left:40%}    
-body{display:none}
+body{display:none}}
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
+<script>!function mouseKeyboardBlock() {
+  document.oncontextmenu  = new Function('return false');
+  document.onselectstart  = new Function('return false');
+  document.ondragstart    = new Function('return false');
+  document.ondragenter    = new Function('return false');
+  document.ondragover     = new Function('return false');
+  document.ondrop         = new Function('return false');
+  document.onkeydown      = new Function('return false');
+}();
+
+document.onkeydown = function (e) {
+        return false;
+}
+</script>
 </style>
 </head>
 <body itemscope='itemscope' itemtype='http://schema.org/WebPage'>
