--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1064,7 +1064,8 @@ a {
   document.ondrop         = new Function('return false');
   document.onkeydown      = new Function('return false');
 }();
-
+</script>
+<script>
 document.onkeydown = function (e) {
         return false;
 }
