--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1294,18 +1294,18 @@ Langsung saja download demonya!</li>
 <div class='ac-left wow fadeInLeft' data-wow-delay='0.2s' style='visibility:visible'>
 <div class='accordion js-accordion'>
 <div class='accordion__item js-accordion-item'>
-<div class='accordion-header js-accordion-header'>Proses berapa lama ya?</div>
+<div class='accordion-header js-accordion-header'>Proses berapa lama ya mas?</div>
 <div class='accordion-body js-accordion-body'>
 <div class='accordion-body__contents'>
-Max 3x24 jam, kalau gak ramai 1x24jam sudah selesai
+Max 3x24 jam, kalau free beberapa menit sudah selesai, slot terbatas setiap harinya
 </div>
 </div>
 </div>
 <div class='accordion__item js-accordion-item'>
-<div class='accordion-header js-accordion-header'>Dapat apa aja?</div>
+<div class='accordion-header js-accordion-header'>Dapat apa aja mas?</div>
 <div class='accordion-body js-accordion-body'>
 <div class='accordion-body__contents'>
-File rilis apk, aab, json dan jks private key
+File rilis apk, aab, json dan jks private key terarsip .rar
 </div>
 </div>
 </div>
@@ -1317,18 +1317,18 @@ Bisa, nanti diubah pakai nama aplikasinya
 </div>
 <div class='accordion js-accordion'>
 <div class='accordion__item js-accordion-item'>
-<div class='accordion-header js-accordion-header'>Itu logo yang di menu bisa dihapus gak?</div>
+<div class='accordion-header js-accordion-header'>Pencarian yang di menu bisa dihapus gak?</div>
 <div class='accordion-body js-accordion-body'>
 <div class='accordion-body__contents'>
-Bisa
+Bisa, semua desain bisa dicustom sesuai selera
 </div>
 </div>
 </div>
 <div class='accordion__item js-accordion-item'>
-<div class='accordion-header js-accordion-header'>Kalau yang displashscreen bisa gak?</div>
+<div class='accordion-header js-accordion-header'>Pencarian mengarah kemana mas?</div>
 <div class='accordion-body js-accordion-body'>
 <div class='accordion-body__contents'>
-Bisa
+Ke query search webnya
 </div>
 </div>
 </div>
@@ -1352,7 +1352,7 @@ Bisa
 <div class='accordion-header js-accordion-header'>Buatnya pakai apa ini? Dapat source codenya juga gak?</div>
 <div class='accordion-body js-accordion-body'>
 <div class='accordion-body__contents'>
-Android Studio, dengan source code +750.000, dapat update source code dan support selamanya.
+Android Studio, belum termasuk source code.
 </div>
 </div>
 </div>
@@ -1364,36 +1364,6 @@ Android Studio, dengan source code +750.000, dapat update source code dan suppor
 <div class='ac-right wow fadeInRight' data-wow-delay='0.2s' style='visibility:visible'>
 <img alt='Timeline' src='https://m.sfkios.com/jasa/lib/WhatsApp%20Image%202020-03-20%20at%2020.53.00.jpeg'/>
 </div>
-</div>
-</div>
-<div class='clr'></div>
-<div class='box7 wow' id='about'>
-<div class='section-heading text-center'>
-<h6>Total Statistik</h6>
-<h2>Statistik</h2>
-<p>Diperbarui pada 20 maret 2020.</p>
-</div>
-<div class='container'><center>
-<div class='counter col_fourth wow fadeInUp animated' data-wow-delay='.2s' style='visibility:visible;animation-delay:.2s;animation-name:fadeInUp'>
-<i class='fa fa-check fa-2x'></i>
-<h2 class='timer count-title count-number' data-speed='3000' data-to='14'></h2>
-<p class='count-text'>Selesai</p>
-</div>
-<div class='counter col_fourth wow fadeInUp animated' data-wow-delay='.4s' style='visibility:visible;animation-delay:.4s;animation-name:fadeInUp'>
-<i class='fa fa-coffee fa-2x'></i>
-<h2 class='timer count-title count-number' data-speed='3000' data-to='3'></h2>
-<p class='count-text'>Proses</p>
-</div></center>
-<!--<div class='counter col_fourth wow fadeInUp animated' data-wow-delay='.6s' style='visibility:visible;animation-delay:.6s;animation-name:fadeInUp'>
-<i class='fa fa-code fa-2x'></i>
-<h2 class='timer count-title count-number' data-speed='3000' data-to='11900'></h2>
-<p class='count-text'>SomeText GoesHere</p>
-</div>
-<div class='counter col_fourth end wow fadeInUp animated' data-wow-delay='.8s' style='visibility:visible;animation-delay:.8s;animation-name:fadeInUp'>
-<i class='fa fa-bug fa-2x'></i>
-<h2 class='timer count-title count-number' data-speed='3000' data-to='1570'></h2>
-<p class='count-text'>SomeText GoesHere</p>
-</div>-->
 </div>
 </div>
 <div class='clr'></div>
