--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <a target="_blank" href="https://sfkios.com">
                         <i class="icon ion-ios-cart" style="color: #0EC244;"></i>
                         <span>
-                            https://<b>sfkios</b>.com
+                            Beranda<b> SFKIOS</b>
                         </span>
                     </a>
                 </li>
@@ -244,7 +244,7 @@
                     <a target="_blank" rel="nofollow" href="#">
                         <i class="icon ion-logo-facebook"></i>
                         <span>
-                            facebook.com/kangrian.net
+                            facebook.com/sfkios
                         </span>
                     </a>
                 </li>
@@ -272,7 +272,7 @@
             <ul>
                 <li>
                     <a target="_blank" href="https://sfkios.web.app/">
-                        <i class="icon ion-ios-cart" style="color: #0EC244;"></i>
+                        <i class="icon ion-download" style="color: #0EC244;"></i>
                         <span>
                             Aplikasi <b>SFKIOS</b>
                         </span>
