--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1044,10 +1044,7 @@ body{display:none}
   content: "Akses ditolak! Gunakan HP atau Mobile";padding-left:40%}    
 body{display:none}
 }
-@media (min-width: 768px) and (max-width: 1024px) {
- html:after {
-  content: "Akses ditolak! Gunakan HP atau Mobile";padding-left:40%}    
-body{display:none}}
+@media (min-width: 768px) and (max-width: 1024px) {}
 input,
 textarea,
 button,
